// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary displays the second project after a timeout 1`] = `
<Summary
  category="passing"
  projects={
    Array [
      Object {
        "name": "org/project-1",
      },
      Object {
        "name": "org/project-2",
      },
    ]
  }
>
  <div
    className="summary summary-passing"
  >
    <div
      className="summary-heading"
    >
      2
       
      passing
    </div>
    <div
      className="summary-details"
    >
      org/project-2
    </div>
  </div>
</Summary>
`;

exports[`Summary loops back to the first project 1`] = `
<Summary
  category="passing"
  projects={
    Array [
      Object {
        "name": "org/project-1",
      },
      Object {
        "name": "org/project-2",
      },
    ]
  }
>
  <div
    className="summary summary-passing"
  >
    <div
      className="summary-heading"
    >
      2
       
      passing
    </div>
    <div
      className="summary-details"
    >
      org/project-1
    </div>
  </div>
</Summary>
`;

exports[`Summary renders correctly 1`] = `
<div
  className="summary summary-passing"
>
  <div
    className="summary-heading"
  >
    2
     
    passing
  </div>
  <div
    className="summary-details"
  >
    org/project-1
  </div>
</div>
`;
